src/tui/app/snapshots/gitlabmr__tui__app__tests__offline_filter.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 12)"
---
╭ Queue ─────────────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ──────────────╮
│   TO REVIEW                  0 ││  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ succes │
│   MINE                       0 ││   1 of 2 approvals · 3 threads, 1 unresolved                   │
│   WATCHING                   0 ││                                                                │
│   DONE ▸                     0 ││                                                                │
│                                ││ ▎▾ src/pay/charge.rs                                 +4 −2  ◆2 │
│                                ││     ▾ @@ -12,4 +12,5 @@ pub async fn charge                    │
│                                ││    12   12  pub async fn charge(card: &Card, amount: Money) -… │
│                                ││    13      -    let client = Client::new();                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 / pay▏  enter keep · esc clear
 offline · last refresh 3m ago                                                               ? help
