src/tui/app/snapshots/gitlabmr__tui__app__tests__queue_loading.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 14)"
---
╭ Queue ─────────────────────────╮╭ Review ────────────────────────────────────────────────────────╮
│   TO REVIEW                    ││                                                                │
│    ▁▁▁ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁         ││                                                                │
│    ▁▁▁ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁         ││                                                                │
│    ▁▁▁ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁         ││                                                                │
│   MINE                         ││                      open a merge request                      │
│    ▁▁▁ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁         ││                      to read its diff here                     │
│    ▁▁▁ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁         ││                                                                │
│    ▁▁▁ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁         ││                                                                │
│   WATCHING                     ││                                                                │
│    ▁▁▁ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁         ││                                                                │
│    ▁▁▁ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁         ││                                                                │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                           ? help
