src/tui/app/snapshots/gitlabmr__tui__app__tests__review_open.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 24)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ──────────────────────────────────╮
│   TO REVIEW                  1 ││  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ success                    │
│ ▎ !42 feat: charge cards at…   ││   1 of 2 approvals · 3 threads, 1 unresolved                                       │
│   MINE                       1 ││                                                                                    │
│   !41 fix: flaky cache test  D ││                                                                                    │
│   WATCHING                   1 ││  ▾ src/pay/charge.rs                                                     +4 −2  ◆2 │
│   !35 infra: new runner      ⠋ ││     ▾ @@ -12,4 +12,5 @@ pub async fn charge                                        │
│   DONE ▸                     1 ││ ▎  12   12  pub async fn charge(card: &Card, amount: Money) -> Result<Receipt> {   │
│                                ││    13      -    let client = Client::new();                                        │
│                                ││     ✓ you · Why drop the plain client? · 2h                                        │
│                                ││         13 +    let client = Client::with_key(idempotency_key(card));              │
│                                ││         14 +    let attempt = Attempt::first();                                    │
│                                ││    14   15      let response = client.charge(amount).await?;                       │
│                                ││    15   16      audit::record(&response);                                          │
│                                ││     ▾ @@ -40,3 +41,4 @@ fn idempotency_key                                         │
│                                ││    40   41  fn idempotency_key(card: &Card) -> Key {                               │
│                                ││    41      -    Key::from(card.number())                                           │
│                                ││         42 +    Key::from((card.number(), card.expiry()))                          │
│                                ││         43 +    // hunk two, line 43 is new                                        │
│                                ││    42   44  }                                                                      │
│                                ││     outdated · 1 thread                                                            │
│                                ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina · 1 unresolved                                                                                ? help
